# grupo3-adapta

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/.github/: copilot-instructions.md
backend/agents/: mcp_agent.py
backend/app/: chat.py  config.py  contents.py  courses.py  materials.py  payments.py  users.py
backend/app/agentic_chat/: agents.py  crew.py  llm.py  tasks.py  tools.py
backend/app/shorts_agent/: agent.py  services.py
backend/app/shorts_module/: routes.py  services.py  utils.py
backend/app/threads_agent/: agent.py  routes.py
backend/models/: __init__.py  course.py  database.py  file.py  lesson.py  payment.py  user.py
backend/services/: course_manager.py  embed.py  file_manager.py  ingest.py  payment.py  schemas.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/docs/: blueprint.md
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/creator/: page.tsx
frontend/src/app/creator/[courseId]/: page.tsx
frontend/src/app/creator/new/: page.tsx
frontend/src/app/user/: page.tsx
frontend/src/app/user/[courseId]/: page.tsx
frontend/src/components/: ChatWithReasoning.tsx  CourseCard.tsx  Header.tsx  Navbar.tsx  PageTransition.tsx  UploadPlaceholder.tsx  VideoPlayerStub.tsx
frontend/src/components/ui/: carousel.tsx  chatbot.tsx  tabs.tsx
frontend/src/lib/: chat-streaming.ts  types.ts
frontend/src/pages/: Home.tsx
frontend/src/store/: lmsStore.ts
(+1 files in other folders)
