[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "SQLAlchemy>=2.0",
  "asyncpg",
  "pydantic>=2",
  "httpx>=0.28.1",
  "langchain>=0.3.26",
  "google-generativeai>=0.8.5",
]
